@@ -228,6 +228,17 @@ _gst_audio_structure_set_list (GstStructure * structure,
  * Deprecated: use gst_structure_set()
  */
 #ifndef GST_REMOVE_DEPRECATED
+#ifdef GST_DISABLE_DEPRECATED
+typedef enum
+{
+  GST_AUDIO_FIELD_RATE = (1 << 0),
+  GST_AUDIO_FIELD_CHANNELS = (1 << 1),
+  GST_AUDIO_FIELD_ENDIANNESS = (1 << 2),
+  GST_AUDIO_FIELD_WIDTH = (1 << 3),
+  GST_AUDIO_FIELD_DEPTH = (1 << 4),
+  GST_AUDIO_FIELD_SIGNED = (1 << 5),
+} GstAudioFieldFlag;
+#endif /* GST_DISABLE_DEPRECATED */
 void
 gst_audio_structure_set_int (GstStructure * structure, GstAudioFieldFlag flag)
 {
